src/builder/tests/update/snapshots/ciboulette2postgres__builder__tests__update__update_main__forced_null_fields.snap
---
source: src/builder/tests/update/update_main.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_update" AS (
  UPDATE
    "public"."peoples"
  SET
    "public"."peoples"."first-name" = $0,
    "public"."peoples"."gender" = $1
  WHERE
    "public"."peoples"."id" = $2 RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_update"."id" :: TEXT AS "id",
    $3 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $4,
      "cte_peoples_update"."age",
      $5,
      "cte_peoples_update"."first-name",
      $6,
      "cte_peoples_update"."gender",
      $7,
      "cte_peoples_update"."last-name",
      $8,
      "cte_peoples_update"."twitter"
    ) AS "data"
  FROM
    "cte_peoples_update"
),
"cte_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    $9 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."favorite_color"
  WHERE
    "public"."favorite_color"."id" IN (
      SELECT
        "cte_peoples_update"."favorite_color"
      FROM
        "cte_peoples_update"
    )
),
"cte_rel_articles_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    $10 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
    INNER JOIN "cte_peoples_data" ON "public"."people-article"."people_id" = "cte_peoples_data"."id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    $11 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."articles"
  WHERE
    "public"."articles"."id" IN (
      SELECT
        "cte_rel_articles_rel_data"."article_id"
      FROM
        "cte_rel_articles_rel_data"
    )
)
SELECT
  "cte_rel_articles_data"."id",
  "cte_rel_articles_data"."type",
  "cte_rel_articles_data"."data"
FROM
  "cte_rel_articles_data"
UNION
ALL
SELECT
  "cte_favorite_color_data"."id",
  "cte_favorite_color_data"."type",
  "cte_favorite_color_data"."data"
FROM
  "cte_favorite_color_data"
UNION
ALL
SELECT
  "cte_rel_articles_rel_data"."id",
  "cte_rel_articles_rel_data"."type",
  "cte_rel_articles_rel_data"."data"
FROM
  "cte_rel_articles_rel_data"
UNION
ALL
SELECT
  "cte_peoples_data"."id",
  "cte_peoples_data"."type",
  "cte_peoples_data"."data"
FROM
  "cte_peoples_data";
