src/builder/tests/update/snapshots/ciboulette2postgres__builder__tests__update__update_main__not_all_required_fields.snap
---
source: src/builder/tests/update/update_main.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_update" AS (
  UPDATE
    "public"."peoples"
  SET
    "first-name" = $1
  WHERE
    "public"."peoples"."id" = $2 RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_update"."id" :: TEXT AS "id",
    $3 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $4,
      "cte_peoples_update"."age",
      $5,
      "cte_peoples_update"."first-name",
      $6,
      "cte_peoples_update"."gender",
      $7,
      "cte_peoples_update"."last-name",
      $8,
      "cte_peoples_update"."twitter"
    ) AS "data",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    "cte_peoples_update"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_update"
) (
  SELECT
    "cte_peoples_data"."id",
    "cte_peoples_data"."type",
    "cte_peoples_data"."data",
    "cte_peoples_data"."related_type",
    "cte_peoples_data"."related_id"
  FROM
    "cte_peoples_data"
);
